--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-textarea-autosize": "^8.5.3",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
